...
            android:orientation="horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondaryDarkColor"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/filter_cues_layout"
            app:layout_constraintBottom_toTopOf="@id/cues_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{!hasResults}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_cue_fab"
            android:onClick="@{() -> viewmodel.onClickNewCue()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
...
