<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.android.sparkstories.ui.cues.NewCueViewModel" />

        <variable
            name="newCueEditTextHasFocus"
            type="Boolean" />

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_cue_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@mipmap/table_top_port"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.cues.NewCueFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/new_cue_info_card"
            android:layout_width="@dimen/new_cue_card_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:visibleGone="@{!newCueEditTextHasFocus}">

            <TextView
                style="@style/Theme.WriteItSayItHearIt.CardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_size_large"
                android:text="@string/new_cue_info_text"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/new_cue_card"
            android:layout_width="@dimen/new_cue_card_width"
            android:layout_height="@dimen/new_cue_card_height"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginRight="@dimen/margin_regular"
            android:layout_marginBottom="@dimen/margin_xlarge"
            app:fillCondition="@{newCueEditTextHasFocus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_cue_info_card"
            app:unFilledHeight="@{@integer/new_cue_card_height_dp}"
            app:unFilledWidth="@{@integer/new_cue_card_width_dp}">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_large">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                    <com.example.android.sparkstories.views.ScaleTextInputEditText
                        android:id="@+id/new_cue_edit_text"
                        style="@style/Theme.WriteItSayItHearIt.CardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cue_text"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:text="@={viewmodel.cueTextField.text}"
                        app:onFocusChangeListener="@{viewmodel.newCueEditTextFocusChangeListener()}" />

                </ScrollView>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_cue_btn"
            style="@style/Theme.WriteItSayItHearIt.MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="@{() -> viewmodel.onClickSubmitCue()}"
            android:text="@string/submit_btn_text"
            app:layout_constraintEnd_toEndOf="@+id/new_cue_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_cue_card"
            app:visibleGone="@{!newCueEditTextHasFocus}" />

        <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:indeterminateTint="@color/secondaryDarkColor"
            android:id="@+id/progress_bar_new_cue"
            visibleGone="@{isLoading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
