...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/table_top_port"
        tools:context=".ui.stories.StoriesFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_comment_button"
            style="@style/Theme.WriteItSayItHearIt.MaterialButton"
            android:padding="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_comment"
            app:layout_constraintEnd_toStartOf="@id/sort_order_spinner"
...
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="sort_order_spinner, new_comment_button"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_list"
            android:adapter="@{listAdapter}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="com.example.android.sparkstories.views.NestedScrollingLinearLayoutManager"
...
