...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_regular">

            <ImageButton
                android:id="@+id/reply_comment_button"
                style="@style/Theme.WriteItSayItHearIt.TopMenuItem"
                android:stateListAnimator="@animator/top_menu_button_state"
                android:backgroundTint="@android:color/white"
                android:nestedScrollingEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
