...

    <string name="new_cue_info_text">Create a new cue to add to the community cue pool! \n\n Cues are meant to get the brain juices flowing! They offer a starting point for writers. \n\n They should be short and concise!</string>
    <string name="new_story_info_text">Create a new story to add to the community! \n\n Stories shouldn\'t be too long. Try to keep them short and focused. The idea is to practice a little everyday!  \n\n Stories will be available to be narrated by the community!</string>
    <string name="cue_text">Cue Text</string>
    <string name="submit_btn_text">Submit</string>

    <string name="invalid_new_cue_snackbar">Cues must be between %1$d and %2$d characters.</string>
    <string name="invalid_new_story_snackbar">Stories must be between %1$d and %2$d characters.</string>
    <string name="invalid_new_comment_snackbar">Comments must be at least %1$d characters.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cues">Cues</string>
...
